package pt.trasmum.loja.dominio.fornecedores;

public enum EstadoPagamento {
    PENDENTE,
    PAGO
}
