@startuml servidor_central_parte5b_dominio_transacional
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #E1F5EE
skinparam classBorderColor #0F6E56
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #0F6E56
skinparam stereotypeCBackgroundColor #EEEDFE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Servidor Central — Domínio (Entidades Transacionais)

package "Domínio (Entidades Transacionais)" #FEFEFE {

  class VendaCentral {
    - id : int
    - idOriginalLoja : int
    - idLoja : String
    - dataHora : LocalDateTime
    - totalFaturado : double
    - metodoPagamento : MetodoPagamentoCentral
    + getIdOriginalLoja() : int
    + getIdLoja() : String
    + getTotalFaturado() : double
  }
  note bottom of VendaCentral
    Chave de idempotência: idLoja +
    idOriginalLoja (ADR-05).
    Versão de leitura — sem
    mecanismo de sincronização.
  end note

  class LinhaVendaCentral {
    - id : int
    - idVendaCentral : int
    - idOriginalLoja : int
    - idLoja : String
    - nomeProduto : String
    - categoria : String
    - quantidade : int
    - precoUnitario : double
    - subtotal : double
    + calcularSubtotal() : double
  }

  class DevolucaoCentral {
    - id : int
    - idOriginalLoja : int
    - idOriginalVenda : int
    - idLoja : String
    - dataHora : LocalDateTime
    - quantidade : int
    - valorRestituido : double
    + getIdOriginalLoja() : int
    + getIdOriginalVenda() : int
    + getIdLoja() : String
  }
  note bottom of DevolucaoCentral
    idOriginalVenda permite rastrear
    a venda de origem da devolução,
    espelhando a relação Devolucao →
    Fatura → Venda do Software de Loja.
  end note

  class RemessaCentral {
    - id : int
    - idOriginalLoja : int
    - idLoja : String
    - nomeFornecedor : String
    - dataRecepcao : LocalDate
    - valorTotalGuia : double
    - estadoPagamento : EstadoPagamento
    + getIdOriginalLoja() : int
    + getIdLoja() : String
    + getEstadoPagamento() : EstadoPagamento
  }

  class PagamentoCentral {
    - id : int
    - idOriginalLoja : int
    - idOriginalRemessa : int
    - idLoja : String
    - valor : double
    - dataPagamento : LocalDate
    - tipoPagamento : TipoPagamentoCentral
    + getIdOriginalLoja() : int
    + getIdOriginalRemessa() : int
    + getIdLoja() : String
  }
  note bottom of PagamentoCentral
    idOriginalRemessa permite rastrear
    a remessa que originou o pagamento,
    espelhando a relação Pagamento →
    Remessa do Software de Loja.
  end note

  class LogAuditoriaCentral {
    - id : int
    - idOriginalLoja : int
    - idLoja : String
    - acao : TipoAcaoCentral
    - dataHora : LocalDateTime
    - nomeUtilizador : String
    + getIdOriginalLoja() : int
    + getIdLoja() : String
    + getAcao() : TipoAcaoCentral
  }

  enum MetodoPagamentoCentral {
    NUMERARIO
    MULTIBANCO
  }

  enum EstadoPagamento {
    PENDENTE_PAGAMENTO
    PAGA
  }


  enum TipoPagamentoCentral {
    TRANSFERENCIA
    NUMERARIO
    CHEQUE
  }

  enum TipoAcaoCentral {
    VENDA
    DEVOLUCAO
    ALTERACAO_PRECO
    APLICACAO_DESCONTO
    GESTAO_UTILIZADOR
    ALTERACAO_CATALOGO
    FECHO_DIA
  }
  note bottom of TipoAcaoCentral
    Espelha TipoAcao do Software de Loja.
    FECHO_DIA adicionado para cobertura
    completa dos logs de auditoria (ADR-07).
  end note
}

' Relações de associação por ID (acoplamento fraco — ADR-05)
VendaCentral --> Loja : idLoja
DevolucaoCentral --> Loja : idLoja
RemessaCentral --> Loja : idLoja
PagamentoCentral --> Loja : idLoja
LogAuditoriaCentral --> Loja : idLoja

' Rastreabilidade entre entidades
DevolucaoCentral ..> VendaCentral : idOriginalVenda
PagamentoCentral ..> RemessaCentral : idOriginalRemessa

' Enumerações
VendaCentral --> MetodoPagamentoCentral
RemessaCentral --> EstadoPagamento
PagamentoCentral --> TipoPagamentoCentral
LogAuditoriaCentral --> TipoAcaoCentral

' Composição
VendaCentral "1" *-- "1..*" LinhaVendaCentral : linhas

@enduml
